--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
   <groupId>com.yarbi</groupId>
   <artifactId>demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+  <repositories>
+    <repository>
+      <id>com.teamdev</id>
+      <url>https://europe-maven.pkg.dev/jxbrowser/releases</url>
+    </repository>
+  </repositories>
   <name>demo</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -45,6 +50,40 @@
     <groupId>org.json</groupId>
     <artifactId>json</artifactId>
     <version>20240303</version>
+</dependency>
+<dependency>
+      <groupId>com.teamdev.jxbrowser</groupId>
+      <artifactId>jxbrowser-cross-platform</artifactId>
+      <version>8.1.0</version>
+      <type>pom</type>
+   </dependency>
+   <dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-server</artifactId>
+    <version>11.0.0</version>  <!-- Adjust if you want a newer version -->
+</dependency>
+
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-servlet</artifactId>
+    <version>11.0.0</version>  <!-- Adjust if you want a newer version -->
+</dependency>
+
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-util</artifactId>
+    <version>11.0.0</version>  <!-- Provides ThreadPool and utilities -->
+</dependency>
+
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-io</artifactId>
+    <version>11.0.0</version>  <!-- Required for IO handling -->
+</dependency>
+    <dependency>
+    <groupId>com.teamdev.jxbrowser</groupId>
+    <artifactId>jxbrowser-javafx</artifactId>
+    <version>8.1.0</version>
 </dependency>
   </dependencies>
 
@@ -98,7 +137,7 @@
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.yarbi.GeoJSONViewer</mainClass> <!-- Your main class -->
+                            <mainClass>com.yarbi.GoMaps</mainClass> <!-- Your main class -->
                         </configuration>
                     </execution>
                 </executions>
